Update index.html - Cleaning up W3C flags

--- a/m01/index.html
+++ b/m01/index.html
@@ -1,6 +1,5 @@
-<!-- Welcome to my series of tubes -->
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
@@ -10,23 +9,22 @@
   <h1>Module 01:  Introduction to HTML</h1>
   <h2>Created by: Alan V</h2>
   <hr>
-		<h3>A Taste of Tampa, The Classic Cuban</h3>
-		<figure>
-			<a href="https://www.food.com/recipe/cuban-sandwich-a-tampa-classic-63269" target="_blank"><img src="cuban-sandwich.jpg" alt="A Classic Cuban Sandwich" title="Classic Cuban Sandwich" /></a>
-			<p>
-				<figcaption>
-					Somebody call the Hambulance! It's a delicious Cuban Sandwich!
-				</figcaption>
-			</p>
-		</figure>
-		<h4>More Recipes:</h4>
-		<p>
+    <h3>A Taste of Tampa, The Classic Cuban</h3>
+    <figure>
+      <a href="https://www.food.com/recipe/cuban-sandwich-a-tampa-classic-63269" target="_blank"><img src="cuban-sandwich.jpg" alt="A Classic Cuban Sandwich" title="Classic Cuban Sandwich" /></a>
+      <p> <!-- Throwing error in W3C, could inline style the <figcaption> tag, but sticking with inherited p margin/padding here -->
+        <figcaption>Somebody call the Hambulance! It's a delicious Cuban Sandwich!</figcaption>
+      </p>
+    </figure>
+    <h4>More Recipes:</h4>
+    <p>
       <!-- Apologies in advance for no 'actual recipe' a few list items. Linked to reference posts instead. -->
-			<a href="https://www.reddit.com/r/food/comments/1hv76hg/homemade_carbonara_with_thick_sliced_pancetta/"><img src="carbonara-with-pancetta.jpg" alt="Carbonara with Pancetta" title="Carbonara with Pancetta by u/MatterBaby90" /></a>
-			<a href="https://www.foodrepublic.com/recipes/all-american-cheeseburger-recipe/"><img src="plain-old-burger.jpg" alt="Plain Old Burger" title="Plain Old Burger by u/Nomadiuus" /></a>
-			<a href="https://www.allrecipes.com/recipe/277220/russian-honey-cake/"><img src="russian-honey-cake.jpg" alt="Russian Honey Cake" title="Russian Honey Cake by u/HousePantherBrutus" /></a>
+      <!-- Trailing slash on <img> elements, force of habit -->
+      <a href="https://www.reddit.com/r/food/comments/1hv76hg/homemade_carbonara_with_thick_sliced_pancetta/"><img src="carbonara-with-pancetta.jpg" alt="Carbonara with Pancetta" title="Carbonara with Pancetta by u/MatterBaby90" /></a>
+      <a href="https://www.foodrepublic.com/recipes/all-american-cheeseburger-recipe/"><img src="plain-old-burger.jpg" alt="Plain Old Burger" title="Plain Old Burger by u/Nomadiuus" /></a>
+      <a href="https://www.allrecipes.com/recipe/277220/russian-honey-cake/"><img src="russian-honey-cake.jpg" alt="Russian Honey Cake" title="Russian Honey Cake by u/HousePantherBrutus" /></a>
       <a href="https://heygrillhey.com/smoked-birria-tacos/"><img src="smoked-birria-tacos.jpg" alt="Smoke Birria Tacos" title="Smoked Birria Tacos by u/TourHopeful7610" /></a>
-			<a href="https://www.reddit.com/r/food/comments/1hv1soa/homemade_steak_eggs_baked_potato/"><img src="steak-eggs-baked-potato.jpg" alt="Steak, Eggs, and a Baked Potato" title="Steak, Eggs, and a Baked Potato by u/Strict_Photograph254" /></a>
-		</p>
+      <a href="https://www.reddit.com/r/food/comments/1hv1soa/homemade_steak_eggs_baked_potato/"><img src="steak-eggs-baked-potato.jpg" alt="Steak, Eggs, and a Baked Potato" title="Steak, Eggs, and a Baked Potato by u/Strict_Photograph254" /></a>
+    </p>
 </body>
 </html>
