Update index.html - More minor cleanup

--- a/m01/index.html
+++ b/m01/index.html
@@ -12,13 +12,12 @@
     <h3>A Taste of Tampa, The Classic Cuban</h3>
     <figure>
       <a href="https://www.food.com/recipe/cuban-sandwich-a-tampa-classic-63269" target="_blank"><img src="cuban-sandwich.jpg" alt="A Classic Cuban Sandwich" title="Classic Cuban Sandwich" /></a>
-      <p> <!-- Throwing error in W3C, could inline style the <figcaption> tag, but sticking with inherited p margin/padding here -->
+      <!-- Went ahead and removed p tags here for W3C, could inline stylize the figcaption to apply the same inherited margin 'p' has, but seems unnecessary -->
         <figcaption>Somebody call the Hambulance! It's a delicious Cuban Sandwich!</figcaption>
-      </p>
     </figure>
     <h4>More Recipes:</h4>
     <p>
-      <!-- Apologies in advance for no 'actual recipe' a few list items. Linked to reference posts instead. -->
+      <!-- Apologies in advance for no 'actual recipe' on a few list items. Linked to reference posts instead. -->
       <!-- Trailing slash on <img> elements, force of habit -->
       <a href="https://www.reddit.com/r/food/comments/1hv76hg/homemade_carbonara_with_thick_sliced_pancetta/"><img src="carbonara-with-pancetta.jpg" alt="Carbonara with Pancetta" title="Carbonara with Pancetta by u/MatterBaby90" /></a>
       <a href="https://www.foodrepublic.com/recipes/all-american-cheeseburger-recipe/"><img src="plain-old-burger.jpg" alt="Plain Old Burger" title="Plain Old Burger by u/Nomadiuus" /></a>
