--- a/m02/index.html
+++ b/m02/index.html
@@ -7,5 +7,61 @@
 </head>
 <body>
 
+  <table>
+    <tr> <!-- Main Table Header -->
+      <th colspan="3"><h1>HTML Table Example</h1></th>
+    </tr>
+    <tr> <!-- Image and Headings Row -->
+      <td><img src="wat.jpg" alt="Filler Image" /></td>
+      <td>
+        <h2>Meal Planner
+        </h2>
+      </td>
+      <td>
+        <h2>Recipe Index #
+        </h2>
+      </td>
+    </tr>
+    <tr> <!-- Row 2: Table Headers -->
+      <th>Week Starting</th>
+      <th>2/15/2018</th>
+      <th>Instructions</th>
+    </tr>
+    <tr> <!-- Content Rows -->
+      <td><b>Days of the Week</b></td>
+      <td><b>Recipe Name</b></td>
+      <td rowspan="8">Add the name of the recipe under the column 'Recipe Name'</td>
+    </tr>
+    <tr>
+      <td>Monday</td>
+      <td>Spinach Feta Pizza</td>
+    </tr>
+    <tr>
+      <td>Tuesday</td>
+      <td>My New Recipe</td>
+    </tr>
+    <tr>
+      <td>Wednesday</td>
+      <td>&nbsp;</td>
+    </tr>
+    <tr>
+      <td>Thursday</td>
+      <td>&nbsp;</td>
+    </tr>
+    <tr>
+      <td>Friday</td>
+      <td>&nbsp;</td>
+    </tr>
+    <tr>
+      <td>Saturday</td>
+      <td>&nbsp;</td>
+    </tr>
+    <tr>
+      <td>Sunday</td>
+      <td>&nbsp;</td>
+    </tr>
+  </table>
+  
+  
 </body>
 </html>
