--- a/m01/index.html
+++ b/m01/index.html
@@ -19,11 +19,11 @@
     <p>
       <!-- Apologies in advance for no 'actual recipe' on a few list items. Linked to reference posts instead. -->
       <!-- Trailing slash on <img> elements, force of habit -->
-      <a href="https://www.reddit.com/r/food/comments/1hv76hg/homemade_carbonara_with_thick_sliced_pancetta/"><img src="carbonara-with-pancetta.jpg" alt="Carbonara with Pancetta" title="Carbonara with Pancetta by u/MatterBaby90" /></a>
-      <a href="https://www.foodrepublic.com/recipes/all-american-cheeseburger-recipe/"><img src="plain-old-burger.jpg" alt="Plain Old Burger" title="Plain Old Burger by u/Nomadiuus" /></a>
-      <a href="https://www.allrecipes.com/recipe/277220/russian-honey-cake/"><img src="russian-honey-cake.jpg" alt="Russian Honey Cake" title="Russian Honey Cake by u/HousePantherBrutus" /></a>
-      <a href="https://heygrillhey.com/smoked-birria-tacos/"><img src="smoked-birria-tacos.jpg" alt="Smoke Birria Tacos" title="Smoked Birria Tacos by u/TourHopeful7610" /></a>
-      <a href="https://www.reddit.com/r/food/comments/1hv1soa/homemade_steak_eggs_baked_potato/"><img src="steak-eggs-baked-potato.jpg" alt="Steak, Eggs, and a Baked Potato" title="Steak, Eggs, and a Baked Potato by u/Strict_Photograph254" /></a>
+      <a href="https://www.reddit.com/r/food/comments/1hv76hg/homemade_carbonara_with_thick_sliced_pancetta/" target="_blank"><img src="carbonara-with-pancetta.jpg" alt="Carbonara with Pancetta" title="Carbonara with Pancetta by u/MatterBaby90" /></a>
+      <a href="https://www.foodrepublic.com/recipes/all-american-cheeseburger-recipe/" target="_blank"><img src="plain-old-burger.jpg" alt="Plain Old Burger" title="Plain Old Burger by u/Nomadiuus" /></a>
+      <a href="https://www.allrecipes.com/recipe/277220/russian-honey-cake/" target="_blank"><img src="russian-honey-cake.jpg" alt="Russian Honey Cake" title="Russian Honey Cake by u/HousePantherBrutus" /></a>
+      <a href="https://heygrillhey.com/smoked-birria-tacos/" target="_blank"><img src="smoked-birria-tacos.jpg" alt="Smoke Birria Tacos" title="Smoked Birria Tacos by u/TourHopeful7610" /></a>
+      <a href="https://www.reddit.com/r/food/comments/1hv1soa/homemade_steak_eggs_baked_potato/" target="_blank"><img src="steak-eggs-baked-potato.jpg" alt="Steak, Eggs, and a Baked Potato" title="Steak, Eggs, and a Baked Potato by u/Strict_Photograph254" /></a>
     </p>
 </body>
 </html>
