--- a/m02/index.html
+++ b/m02/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 
-  <table>
+  <table style="border: 1px solid;">
     <tr> <!-- Main Table Header -->
       <th colspan="3"><h1>HTML Table Example</h1></th>
     </tr>
