--- a/m02/index.html
+++ b/m02/index.html
@@ -9,7 +9,7 @@
 
   <table style="border: 1px solid;">
     <tr> <!-- Main Table Header -->
-      <th colspan="3"><h1>HTML Table Example</h1></th>
+      <td colspan="3"><h1>HTML Table Example</h1></td>
     </tr>
     <tr> <!-- Image and Headings Row -->
       <td><img src="wat.jpg" alt="Filler Image" /></td>
