--- a/m03/index.html
+++ b/m03/index.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
+  <link rel="Stylesheet" type="text/css" href="style.css">
   <title>Module 03</title>
 </head>
 <body>
