--- a/m03/index.html
+++ b/m03/index.html
@@ -4,6 +4,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
   <link rel="Stylesheet" type="text/css" href="style.css">
+  <link rel="stylesheet" media="screen" type="text/css" href="https://fontlibrary.org/en/face/dancing">
   <title>Module 03</title>
 </head>
 <body>
