--- a/a2/index.html
+++ b/a2/index.html
@@ -1,4 +1,112 @@
+<!DOCTYPE html>
+<html lang="en">
 <head>
-<meta charset="utf-8">
-<link rel="stylesheet" type="text/css" href="#"> <!-- TODO: Create and Link CSS stylesheet -->
+    <meta name="description" content="PROG 109 - Chessboard" />
+    <meta charset="utf-8" />
+    <title>Chessboard</title>
+    <link rel="stylesheet" href="style.css" type="text/css" />
+    <link rel="stylesheet" media="screen" href="https://openfontlibrary.org/face/just-letters" type="text/css" />
 </head>
+<body>
+<h1 id="title">Chessboard</h1>
+<div id="container">
+    <div class="row"> <!-- Row 1 -->
+        <div class="white"><img src="https://pixabay.com/static/uploads/photo/2013/07/12/16/56/chess-151540_640.png" alt="chess figure - black castle" width="20"></div>
+        <div class="black"></div>
+        <div class="white"></div>
+        <div class="black"></div>
+        <div class="white"></div>
+        <div class="black"></div>
+        <div class="white"></div>
+        <div class="black"></div>
+    </div>
+    <div class="clear"> </div>
+
+    <div class="row"> <!-- Row 2 -->
+        <div class="black"></div>
+        <div class="white"></div>
+        <div class="black"></div>
+        <div class="white"></div>
+        <div class="black"></div>
+        <div class="white"></div>
+        <div class="black"></div>
+        <div class="white"></div>
+    </div>
+    <div class="clear"> </div>
+    <div class="row"> <!-- Row 3 -->
+        <div class="white"></div>
+        <div class="black"></div>
+        <div class="white"></div>
+        <div class="black"></div>
+        <div class="white"></div>
+        <div class="black"></div>
+        <div class="white"></div>
+        <div class="black"></div>
+    </div>
+    <div class="clear"> </div>
+
+    <div class="row"> <!-- Row 4 -->
+        <div class="black"></div>
+        <div class="white"></div>
+        <div class="black"></div>
+        <div class="white"></div>
+        <div class="black"></div>
+        <div class="white"></div>
+        <div class="black"></div>
+        <div class="white"></div>
+    </div>
+    <div class="clear"> </div>
+    <div class="row"> <!-- Row 5 -->
+        <div class="white"></div>
+        <div class="black"></div>
+        <div class="white"></div>
+        <div class="black"></div>
+        <div class="white"></div>
+        <div class="black"></div>
+        <div class="white"></div>
+        <div class="black"></div>
+    </div>
+    <div class="clear"> </div>
+
+    <div class="row"> <!-- Row 6 -->
+        <div class="black"></div>
+        <div class="white"></div>
+        <div class="black"></div>
+        <div class="white"></div>
+        <div class="black"></div>
+        <div class="white"></div>
+        <div class="black"></div>
+        <div class="white"></div>
+    </div>
+    <div class="clear"> </div>
+    <div class="row"> <!-- Row 7 -->
+        <div class="white"></div>
+        <div class="black"></div>
+        <div class="white"></div>
+        <div class="black"></div>
+        <div class="white"></div>
+        <div class="black"></div>
+        <div class="white"></div>
+        <div class="black"></div>
+    </div>
+    <div class="clear"> </div>
+
+    <div class="row"> <!-- Row 8 -->
+        <div class="black"></div>
+        <div class="white"></div>
+        <div class="black"></div>
+        <div class="white"></div>
+        <div class="black"></div>
+        <div class="white"></div>
+        <div class="black"></div>
+        <div class="white"></div>
+    </div>
+</div> <!-- END OF CONTAINER -->
+
+<div class="clear"> </div>
+<div id="footer"><p><a href="https://validator.w3.org/check?uri=referer" target="_blank"><img src="https://www.w3.org/Icons/valid-xhtml10" alt="Valid XHTML 1.0" height="31" width="88" /></a>
+    <a href="https://jigsaw.w3.org/css-validator/check/referer" target="_blank"><img style="border:0;width:88px;height:31px" src="https://jigsaw.w3.org/css-validator/images/vcss-blue" alt="Valid CSS!"></a></p></div>
+
+
+</body>
+</html>
