just-letters link fix + additional font to work with (Ugly Typist)

--- a/a2/index.html
+++ b/a2/index.html
@@ -5,7 +5,8 @@
     <meta charset="utf-8" />
     <title>Chessboard</title>
     <link rel="stylesheet" href="style.css" type="text/css" />
-    <link rel="stylesheet" media="screen" href="https://openfontlibrary.org/face/just-letters" type="text/css" />
+    <link rel="stylesheet" media="screen" href="https://openfontlibrary.org//face/just-letters" type="text/css" />
+    <link rel="stylesheet" media="screen" href="https://fontlibrary.org//face/uglytypist" type="text/css" /> <!-- Additional Font for Funsies -->
 </head>
 <body>
 <h1 id="title">Chessboard</h1>
