--- a/a2/index.html
+++ b/a2/index.html
@@ -14,25 +14,25 @@
     </header>
     <div id="container">
         <div class="row"> <!-- Row 1 -->
-            <div class="white"><img src="https://pixabay.com/static/uploads/photo/2013/07/12/16/56/chess-151540_640.png" alt="chess figure - black castle" width="20"></div>
-            <div class="black"></div>
-            <div class="white"></div>
-            <div class="black"></div>
-            <div class="white"></div>
-            <div class="black"></div>
-            <div class="white"></div>
-            <div class="black"></div>
+            <div class="white"><img src="/dev109/a1/images/gold-castle.png" alt="chess figure - gold rook" width="20"></div>
+            <div class="black"><img src="/dev109/a1/images/gold-knight.png" alt="chess figure - gold knight" width="20"></div>
+            <div class="white"><img src="/dev109/a1/images/gold-bishop.png" alt="chess figure - gold bishop" width="20"></div>
+            <div class="black"><img src="/dev109/a1/images/gold-king.png" alt="chess figure - gold king" width="20"></div>
+            <div class="white"><img src="/dev109/a1/images/gold-queen.png" alt="chess figure - gold queen" width="20"></div>
+            <div class="black"><img src="/dev109/a1/images/gold-bishop.png" alt="chess figure - gold bishop" width="20"></div>
+            <div class="white"><img src="/dev109/a1/images/gold-knight.png" alt="chess figure - gold knight" width="20"></div>
+            <div class="black"><img src="/dev109/a1/images/gold-castle.png" alt="chess figure - gold rook" width="20"></div>
         </div>
         <div class="clear"> </div>
         <div class="row"> <!-- Row 2 -->
-            <div class="black"></div>
-            <div class="white"></div>
-            <div class="black"></div>
-            <div class="white"></div>
-            <div class="black"></div>
-            <div class="white"></div>
-            <div class="black"></div>
-            <div class="white"></div>
+            <div class="black"><img src="/dev109/a1/images/gold-pawn.png" alt="chess figure - gold pawn" width="20"></div>
+            <div class="white"><img src="/dev109/a1/images/gold-pawn.png" alt="chess figure - gold pawn" width="20"></div>
+            <div class="black"><img src="/dev109/a1/images/gold-pawn.png" alt="chess figure - gold pawn" width="20"></div>
+            <div class="white"><img src="/dev109/a1/images/gold-pawn.png" alt="chess figure - gold pawn" width="20"></div>
+            <div class="black"><img src="/dev109/a1/images/gold-pawn.png" alt="chess figure - gold pawn" width="20"></div>
+            <div class="white"><img src="/dev109/a1/images/gold-pawn.png" alt="chess figure - gold pawn" width="20"></div>
+            <div class="black"><img src="/dev109/a1/images/gold-pawn.png" alt="chess figure - gold pawn" width="20"></div>
+            <div class="white"><img src="/dev109/a1/images/gold-pawn.png" alt="chess figure - gold pawn" width="20"></div>
         </div>
         <div class="clear"> </div>
         <div class="row"> <!-- Row 3 -->
