Syntax fix - accidental double quotes on line 22

--- a/a2/index.html
+++ b/a2/index.html
@@ -19,7 +19,7 @@
             <div class="white"><img src="/dev109/a2/images/gold-bishop.png" alt="chess figure - gold bishop"></div>
             <div class="black"><img src="/dev109/a2/images/gold-king.png" alt="chess figure - gold king"></div>
             <div class="white"><img src="/dev109/a2/images/gold-queen.png" alt="chess figure - gold queen"></div>
-            <div class="black"><img src="/dev109/a2/images/gold-bishop.png" alt="chess figure - gold bishop""></div>
+            <div class="black"><img src="/dev109/a2/images/gold-bishop.png" alt="chess figure - gold bishop"></div>
             <div class="white"><img src="/dev109/a2/images/gold-knight.png" alt="chess figure - gold knight"></div>
             <div class="black"><img src="/dev109/a2/images/gold-castle.png" alt="chess figure - gold rook"></div>
         </div>
