Removed trailing slashes on various elements.
Is this a bad habit? I mean, come on.

--- a/a2/index.html
+++ b/a2/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta name="description" content="PROG 109 - Chessboard" />
-    <meta charset="utf-8" />
+    <meta name="description" content="PROG 109 - Chessboard">
+    <meta charset="utf-8">
     <title>Chessboard</title>
-    <link rel="stylesheet" href="style.css" type="text/css" />
-    <link rel="stylesheet" media="screen" href="https://openfontlibrary.org/en/face/just-letters" type="text/css" />
-    <link rel="stylesheet" media="screen" href="https://fontlibrary.org/en/face/uglytypist" type="text/css" /> <!-- Additional Font for Funsies -->
+    <link rel="stylesheet" href="style.css" type="text/css">
+    <link rel="stylesheet" media="screen" href="https://openfontlibrary.org/en/face/just-letters" type="text/css">
+    <link rel="stylesheet" media="screen" href="https://fontlibrary.org/en/face/uglytypist" type="text/css"> <!-- Additional Font for Funsies -->
 </head>
 <body>
     <header>
@@ -104,7 +104,7 @@
     <div class="clear"> </div>
     <div id="footer">
         <p>
-            <a href="https://validator.w3.org/check?uri=referer" target="_blank"><img src="https://www.w3.org/Icons/valid-xhtml10" alt="Valid XHTML 1.0" height="31" width="88" /></a>
+            <a href="https://validator.w3.org/check?uri=referer" target="_blank"><img src="https://www.w3.org/Icons/valid-xhtml10" alt="Valid XHTML 1.0" height="31" width="88"></a>
             <a href="https://jigsaw.w3.org/css-validator/check/referer" target="_blank"><img style="border:0;width:88px;height:31px" src="https://jigsaw.w3.org/css-validator/images/vcss-blue" alt="Valid CSS!"></a>
         </p>
     </div>
