--- a/a2/index.html
+++ b/a2/index.html
@@ -4,9 +4,10 @@
 <meta name="description" content="PROG 109 - Chessboard" />
 <meta charset="utf-8" />
 <title>a2 - Chessboard</title>
-<link rel="stylesheet" media="screen" href="http://openfontlibrary.org/face/just-letters" type="text/css"/>
+<link rel="stylesheet" media="screen" href="http://openfontlibrary.org/face/just-letters" type="text/css">
 <!-- Custom Font for Heading - Courtesy of OpenFontLibrary -->
-<link rel="stylesheet" media="screen" href="https://fontlibrary.org/en/face/roboto" type="text/css"/>  
+<link rel="stylesheet" media="screen" href="https://fontlibrary.org/en/face/roboto" type="text/css">
+<link rel="Stylesheet" media="screen" href="a2/style.css" type="text/css">
 </head>
 <body>
 <h1 id="title">Chessboard</h1>
@@ -110,8 +111,8 @@
 </div> <!-- Parent Wrapper - End -->
   <div class="clear"> </div>
 <div id="footer"> <!-- Footer - Begin -->
-  <p><a href="http://validator.w3.org/check?uri=referer" target="_blank"><img src="http://www.w3.org/Icons/valid-xhtml10" alt="Valid XHTML 1.0" height="31" width="88" /></a></p>
- <p><a href="http://jigsaw.w3.org/css-validator/check/referer" target="_blank"><img src="http://jigsaw.w3.org/css-validator/images/vcss-blue" alt="Valid CSS!"/></a></p>
+  <p><a href="http://validator.w3.org/check?uri=referer" target="_blank"><img src="http://www.w3.org/Icons/valid-xhtml10" alt="Valid XHTML 1.0" height="31" width="88"></a></p>
+ <p><a href="http://jigsaw.w3.org/css-validator/check/referer" target="_blank"><img src="http://jigsaw.w3.org/css-validator/images/vcss-blue" alt="Valid CSS!"></a></p>
 </div> <!-- Footer - End -->
 </body>
 </html>
