FIX: Updated 'just-letters' link path.

--- a/a2/index.html
+++ b/a2/index.html
@@ -4,7 +4,7 @@
 <meta name="description" content="PROG 109 - Chessboard" />
 <meta charset="utf-8" />
 <title>a2 - Chessboard</title>
-<link rel="stylesheet" media="screen" href="http://openfontlibrary.org/face/just-letters" type="text/css">
+<link rel="stylesheet" media="screen" href="https://fontlibrary.org/en/face/just-letters" type="text/css">
 <!-- Custom Font for Heading - Courtesy of OpenFontLibrary -->
 <link rel="stylesheet" media="screen" href="https://fontlibrary.org/en/face/roboto" type="text/css">
 <link rel="Stylesheet" media="screen" href="/dev109/a2/style.css" type="text/css">
