--- a/a2/index.html
+++ b/a2/index.html
@@ -7,7 +7,7 @@
 <link rel="stylesheet" media="screen" href="https://fontlibrary.org/en/face/just-letters" type="text/css">
 <!-- Custom Font for Heading - Courtesy of OpenFontLibrary -->
 <link rel="stylesheet" media="screen" href="https://fontlibrary.org/en/face/roboto" type="text/css">
-<link rel="Stylesheet" media="screen" href="/dev109/a2/style.css" type="text/css">
+<link rel="stylesheet" media="screen" href="/dev109/a2/style.css" type="text/css">
 </head>
 <body>
 <h1 id="title">Chessboard</h1>
