Heading and Title Element Cleanup

--- a/a2/index.html
+++ b/a2/index.html
@@ -10,7 +10,9 @@
 <link rel="stylesheet" media="screen" href="style.css" type="text/css">
 </head>
 <body>
-<h1 id="title">Chessboard</h1>
+<header> <!-- Header Element - Begin -->  
+  <h1 id="title">Chessboard</h1>
+</header> <!-- Header Element - End -->  
 <div id="container"> <!-- Parent Wrapper - Begin -->
 <!-- Row 1 -->
   <div class="row"> 
