Added darker set img elements and styles.

--- a/a2/index.html
+++ b/a2/index.html
@@ -15,27 +15,27 @@
 </header> <!-- Header Element - End -->  
 <div id="container"> <!-- Parent Wrapper - Begin -->
 <!-- Row 1 -->
-  <div class="row"> 
-    <div class="white"></div>
-    <div class="black"></div>
-    <div class="white"></div>
-    <div class="black"></div>
-    <div class="white"></div>
-    <div class="black"></div>
-    <div class="white"></div>
-    <div class="black"></div>
+  <div class="row">
+    <div class="white"><img src="/dev109/a2/images/gold-castle.png" alt="chess figure - gold rook"></div>
+    <div class="black"><img src="/dev109/a2/images/gold-knight.png" alt="chess figure - gold knight"></div>
+    <div class="white"><img src="/dev109/a2/images/gold-bishop.png" alt="chess figure - gold bishop"></div>
+    <div class="black"><img src="/dev109/a2/images/gold-king.png" alt="chess figure - gold king"></div>
+    <div class="white"><img src="/dev109/a2/images/gold-queen.png" alt="chess figure - gold queen"></div>
+    <div class="black"><img src="/dev109/a2/images/gold-bishop.png" alt="chess figure - gold bishop"></div>
+    <div class="white"><img src="/dev109/a2/images/gold-knight.png" alt="chess figure - gold knight"></div>
+    <div class="black"><img src="/dev109/a2/images/gold-castle.png" alt="chess figure - gold rook"></div>
   </div>
   <div class="clear"> </div>
 <!-- Row 2 -->
   <div class="row">
-    <div class="black"></div>
-    <div class="white"></div>
-    <div class="black"></div>
-    <div class="white"></div>
-    <div class="black"></div>
-    <div class="white"></div>
-    <div class="black"></div>
-    <div class="white"></div>
+    <div class="black"><img src="/dev109/a2/images/gold-pawn.png" alt="chess figure - gold pawn"></div>
+    <div class="white"><img src="/dev109/a2/images/gold-pawn.png" alt="chess figure - gold pawn"></div>
+    <div class="black"><img src="/dev109/a2/images/gold-pawn.png" alt="chess figure - gold pawn"></div>
+    <div class="white"><img src="/dev109/a2/images/gold-pawn.png" alt="chess figure - gold pawn"></div>
+    <div class="black"><img src="/dev109/a2/images/gold-pawn.png" alt="chess figure - gold pawn"></div>
+    <div class="white"><img src="/dev109/a2/images/gold-pawn.png" alt="chess figure - gold pawn"></div>
+    <div class="black"><img src="/dev109/a2/images/gold-pawn.png" alt="chess figure - gold pawn"></div>
+    <div class="white"><img src="/dev109/a2/images/gold-pawn.png" alt="chess figure - gold pawn"></div>
   </div>
   <div class="clear"> </div>
 <!-- Row 3 -->
