--- a/a2/index.html
+++ b/a2/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta name="description" content="PROG 109 - Chessboard" />
-<meta charset="utf-8" />
+<meta name="description" content="PROG 109 - Chessboard">
+<meta charset="utf-8">
 <title>a2 - Chessboard</title>
 <link rel="stylesheet" media="screen" href="https://fontlibrary.org/en/face/just-letters" type="text/css">
 <!-- Custom Font for Heading - Courtesy of OpenFontLibrary -->
