--- a/a2/index.html
+++ b/a2/index.html
@@ -3,6 +3,8 @@
 <head>
 <meta name="description" content="PROG 109 - Chessboard">
 <meta charset="utf-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<meta name="keywords" content="Chessboard, table sample, Prog109 team assignment">
 <title>a2 - Chessboard</title>
 <link rel="stylesheet" media="screen" href="https://fontlibrary.org/en/face/just-letters" type="text/css">
 <!-- Custom Font for Heading - Courtesy of OpenFontLibrary -->
