--- a/a2/index.html
+++ b/a2/index.html
@@ -18,7 +18,7 @@
 <div id="container"> <!-- Parent Wrapper - Begin -->
 <!-- Row 1 -->
   <div class="row">
-    <div class="white"><img src="/dev109/a2/images/gold-castle.png" alt="chess figure - gold rook"></div>
+    <div class="white"><img src="images/gold-castle.png" alt="chess figure - gold rook"></div>
     <div class="black"><img src="/dev109/a2/images/gold-knight.png" alt="chess figure - gold knight"></div>
     <div class="white"><img src="/dev109/a2/images/gold-bishop.png" alt="chess figure - gold bishop"></div>
     <div class="black"><img src="/dev109/a2/images/gold-king.png" alt="chess figure - gold king"></div>
