--- a/a2/index.html
+++ b/a2/index.html
@@ -19,25 +19,25 @@
 <!-- Row 1 -->
   <div class="row">
     <div class="white"><img src="images/gold-castle.png" alt="chess figure - gold rook"></div>
-    <div class="black"><img src="/dev109/a2/images/gold-knight.png" alt="chess figure - gold knight"></div>
-    <div class="white"><img src="/dev109/a2/images/gold-bishop.png" alt="chess figure - gold bishop"></div>
-    <div class="black"><img src="/dev109/a2/images/gold-king.png" alt="chess figure - gold king"></div>
-    <div class="white"><img src="/dev109/a2/images/gold-queen.png" alt="chess figure - gold queen"></div>
-    <div class="black"><img src="/dev109/a2/images/gold-bishop.png" alt="chess figure - gold bishop"></div>
-    <div class="white"><img src="/dev109/a2/images/gold-knight.png" alt="chess figure - gold knight"></div>
-    <div class="black"><img src="/dev109/a2/images/gold-castle.png" alt="chess figure - gold rook"></div>
+    <div class="black"><img src="images/gold-knight.png" alt="chess figure - gold knight"></div>
+    <div class="white"><img src="images/gold-bishop.png" alt="chess figure - gold bishop"></div>
+    <div class="black"><img src="images/gold-king.png" alt="chess figure - gold king"></div>
+    <div class="white"><img src="images/gold-queen.png" alt="chess figure - gold queen"></div>
+    <div class="black"><img src="/images/gold-bishop.png" alt="chess figure - gold bishop"></div>
+    <div class="white"><img src="images/gold-knight.png" alt="chess figure - gold knight"></div>
+    <div class="black"><img src="images/gold-castle.png" alt="chess figure - gold rook"></div>
   </div>
   <div class="clear"> </div>
 <!-- Row 2 -->
   <div class="row">
-    <div class="black"><img src="/dev109/a2/images/gold-pawn.png" alt="chess figure - gold pawn"></div>
-    <div class="white"><img src="/dev109/a2/images/gold-pawn.png" alt="chess figure - gold pawn"></div>
-    <div class="black"><img src="/dev109/a2/images/gold-pawn.png" alt="chess figure - gold pawn"></div>
-    <div class="white"><img src="/dev109/a2/images/gold-pawn.png" alt="chess figure - gold pawn"></div>
-    <div class="black"><img src="/dev109/a2/images/gold-pawn.png" alt="chess figure - gold pawn"></div>
-    <div class="white"><img src="/dev109/a2/images/gold-pawn.png" alt="chess figure - gold pawn"></div>
-    <div class="black"><img src="/dev109/a2/images/gold-pawn.png" alt="chess figure - gold pawn"></div>
-    <div class="white"><img src="/dev109/a2/images/gold-pawn.png" alt="chess figure - gold pawn"></div>
+    <div class="black"><img src="images/gold-pawn.png" alt="chess figure - gold pawn"></div>
+    <div class="white"><img src="images/gold-pawn.png" alt="chess figure - gold pawn"></div>
+    <div class="black"><img src="images/gold-pawn.png" alt="chess figure - gold pawn"></div>
+    <div class="white"><img src="images/gold-pawn.png" alt="chess figure - gold pawn"></div>
+    <div class="black"><img src="images/gold-pawn.png" alt="chess figure - gold pawn"></div>
+    <div class="white"><img src="images/gold-pawn.png" alt="chess figure - gold pawn"></div>
+    <div class="black"><img src="images/gold-pawn.png" alt="chess figure - gold pawn"></div>
+    <div class="white"><img src="images/gold-pawn.png" alt="chess figure - gold pawn"></div>
   </div>
   <div class="clear"> </div>
 <!-- Row 3 -->
@@ -90,26 +90,26 @@
   <div class="clear"> </div>
 <!-- Row 7 -->
   <div class="row"> 
-    <div class="white"></div>
-    <div class="black"></div>
-    <div class="white"></div>
-    <div class="black"></div>
-    <div class="white"></div>
-    <div class="black"></div>
-    <div class="white"></div>
-    <div class="black"></div>
+    <div class="white"><img src="images/black-pawn.png" alt="chess figure - black pawn"></div>
+    <div class="black"><img src="images/black-pawn.png" alt="chess figure - black pawn"></div>
+    <div class="white"><img src="images/black-pawn.png" alt="chess figure - black pawn"></div>
+    <div class="black"><img src="images/black-pawn.png" alt="chess figure - black pawn"></div>
+    <div class="white"><img src="images/black-pawn.png" alt="chess figure - black pawn"></div>
+    <div class="black"><img src="images/black-pawn.png" alt="chess figure - black pawn"></div>
+    <div class="white"><img src="images/black-pawn.png" alt="chess figure - black pawn"></div>
+    <div class="black"><img src="images/black-pawn.png" alt="chess figure - black pawn"></div>
   </div>
   <div class="clear"> </div>
 <!-- Row 8 -->
   <div class="row">
-    <div class="black"></div>
-    <div class="white"></div>
-    <div class="black"></div>
-    <div class="white"></div>
-    <div class="black"></div>
-    <div class="white"></div>
-    <div class="black"></div>
-    <div class="white"></div>
+    <div class="black"><img src="images/black-castle.png" alt="chess figure - black rook"></div>
+    <div class="white"><img src="images/black-knight.png" alt="chess figure - black knight"></div>
+    <div class="black"><img src="images/black-bishop.png" alt="chess figure - black bishop"></div>
+    <div class="white"><img src="images/black-king.png" alt="chess figure - black king"></div>
+    <div class="black"><img src="images/black-queen.png" alt="chess figure - black queen"></div>
+    <div class="white"><img src="images/black-bishop.png" alt="chess figure - black bishop"></div>
+    <div class="black"><img src="images/black-knight.png" alt="chess figure - black knight"></div>
+    <div class="white"><img src="images/black-castle.png" alt="chess figure - black rook"></div>
   </div>
 </div> <!-- Parent Wrapper - End -->
 <div class="clear"> </div>
