--- a/a2/index.html
+++ b/a2/index.html
@@ -23,7 +23,7 @@
     <div class="white"><img src="images/gold-bishop.png" alt="chess figure - gold bishop"></div>
     <div class="black"><img src="images/gold-king.png" alt="chess figure - gold king"></div>
     <div class="white"><img src="images/gold-queen.png" alt="chess figure - gold queen"></div>
-    <div class="black"><img src="/images/gold-bishop.png" alt="chess figure - gold bishop"></div>
+    <div class="black"><img src="images/gold-bishop.png" alt="chess figure - gold bishop"></div>
     <div class="white"><img src="images/gold-knight.png" alt="chess figure - gold knight"></div>
     <div class="black"><img src="images/gold-castle.png" alt="chess figure - gold rook"></div>
   </div>
