--- a/a2/index.html
+++ b/a2/index.html
@@ -7,15 +7,15 @@
 <meta name="keywords" content="Chessboard, table sample, Prog109 team assignment">
 <title>a2 - Chessboard</title>
 <link rel="stylesheet" media="screen" href="https://fontlibrary.org/en/face/just-letters" type="text/css">
-<!-- Custom Font for Heading - Courtesy of OpenFontLibrary -->
+<!-- AV: Custom Font for Heading - Courtesy of OpenFontLibrary -->
 <link rel="stylesheet" media="screen" href="https://fontlibrary.org/en/face/roboto" type="text/css">
 <link rel="stylesheet" media="screen" href="style.css" type="text/css">
 </head>
 <body>
-<header> <!-- Header Element - Begin -->  
+<header> <!-- AV: Header Element - Begin -->  
   <h1 id="title">Chessboard</h1>
-</header> <!-- Header Element - End -->  
-<div id="container"> <!-- Parent Wrapper - Begin -->
+</header> <!-- AV: Header Element - End -->  
+<div id="container"> <!-- AV: Parent Wrapper - Begin -->
 <!-- Row 1 -->
   <div class="row">
     <div class="white"><img src="images/gold-castle.png" alt="chess figure - gold rook"></div>
@@ -111,12 +111,12 @@
     <div class="black"><img src="images/black-knight.png" alt="chess figure - black knight"></div>
     <div class="white"><img src="images/black-castle.png" alt="chess figure - black rook"></div>
   </div>
-</div> <!-- Parent Wrapper - End -->
+</div> <!-- AV: Parent Wrapper - End -->
 <div class="clear"> </div>
   <div class="clear"> </div>
-<div id="footer"> <!-- Footer - Begin -->
+<div id="footer"> <!-- AV: Footer - Begin -->
   <p><a href="http://validator.w3.org/check?uri=referer" target="_blank"><img src="http://www.w3.org/Icons/valid-xhtml10" alt="Valid XHTML 1.0" height="31" width="88"></a></p>
  <p><a href="http://jigsaw.w3.org/css-validator/check/referer" target="_blank"><img src="http://jigsaw.w3.org/css-validator/images/vcss-blue" alt="Valid CSS!"></a></p>
-</div> <!-- Footer - End -->
+</div> <!-- AV: Footer - End -->
 </body>
 </html>
