--- a/a2/index.html
+++ b/a2/index.html
@@ -3,14 +3,19 @@
 <head>
 <meta name="description" content="PROG 109 - Chessboard">
 <meta charset="utf-8">
+    <!--NL add meta date for the different devises scale-->
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!--NL add meta date for SEO -->
 <meta name="keywords" content="Chessboard, table sample, Prog109 team assignment">
+      <!--NL Page title in hte browser window-->
 <title>a2 - Chessboard</title>
 <link rel="stylesheet" media="screen" href="https://fontlibrary.org/en/face/just-letters" type="text/css">
 <!-- AV: Custom Font for Heading - Courtesy of OpenFontLibrary -->
 <link rel="stylesheet" media="screen" href="https://fontlibrary.org/en/face/roboto" type="text/css">
+      <!--NL link ot the CSS-->
 <link rel="stylesheet" media="screen" href="style.css" type="text/css">
 </head>
+      <!--NL start webpage UI content-->
 <body>
 <header> <!-- AV: Header Element - Begin -->  
   <h1 id="title">Chessboard</h1>
@@ -89,6 +94,7 @@
   </div>
   <div class="clear"> </div>
 <!-- Row 7 -->
+      <!--NL first line for the black chess pices begine here-->
   <div class="row"> 
     <div class="white"><img src="images/black-pawn.png" alt="chess figure - black pawn"></div>
     <div class="black"><img src="images/black-pawn.png" alt="chess figure - black pawn"></div>
@@ -100,6 +106,7 @@
     <div class="black"><img src="images/black-pawn.png" alt="chess figure - black pawn"></div>
   </div>
   <div class="clear"> </div>
+    <!--NL second line for the black chess pices begine here /last line of hte chess board-->
 <!-- Row 8 -->
   <div class="row">
     <div class="black"><img src="images/black-castle.png" alt="chess figure - black rook"></div>
@@ -112,6 +119,7 @@
     <div class="white"><img src="images/black-castle.png" alt="chess figure - black rook"></div>
   </div>
 </div> <!-- AV: Parent Wrapper - End -->
+  <!--NL: resizing and wrapper controll-->
 <div class="clear"> </div>
   <div class="clear"> </div>
 <div id="footer"> <!-- AV: Footer - Begin -->
