Table border color, center top td element (table heading)

--- a/m02/index.html
+++ b/m02/index.html
@@ -7,9 +7,9 @@
 </head>
 <body>
 
-  <table style="border: 1px solid;">
+  <table style="border: 1px solid #f06425;">
     <tr> <!-- Main Table Header -->
-      <td colspan="3"><h1>HTML Table Example</h1></td>
+      <td colspan="3" style="text-align: center;"><h1>HTML Table Example</h1></td>
     </tr>
     <tr> <!-- Image and Headings Row -->
       <td><img src="wat.jpg" alt="Filler Image" /></td>
