Removed trailing slash - line 15

--- a/m02/index.html
+++ b/m02/index.html
@@ -12,7 +12,7 @@
       <td colspan="3" style="text-align: center;"><h1>HTML Table Example</h1></td>
     </tr>
     <tr> <!-- Image and Headings Row -->
-      <td><img src="wat.jpg" alt="Filler Image" /></td>
+      <td><img src="wat.jpg" alt="Filler Image"></td>
       <td>
         <h2>Meal Planner
         </h2>
