--- a/m04/index.html
+++ b/m04/index.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width">
-    <link rel="stylesheet" href="style.css" type="text/css">
-  	<title>Liquid Layout</title>
+	<head>
+		<meta charset="utf-8">
+		<meta name="viewport" content="width=device-width">
+		<link rel="stylesheet" href="style.css" type="text/css">
+		<link rel="stylesheet" media="screen" href="https://fontlibrary.org/en/face/redkost-comic" type="text/css"/>
+		<title>Liquid Layout</title>
 	</head>
 	<body>
 		<div id="header">
@@ -32,9 +33,9 @@
 			<div class="article column3">
 				<p>Column Three</p>
 			</div>
+			</div>
+			<div id="footer">
+				<p>© Copyright 2011</p>
 		</div>
-		<div id="footer">
-			<p>© Copyright 2011</p>
-		</div>
-  </body>
+	</body>
 </html>
