--- a/m04/index.html
+++ b/m04/index.html
@@ -5,7 +5,7 @@
 		<meta name="viewport" content="width=device-width">
 		<link rel="stylesheet" href="style.css" type="text/css">
 		<link rel="stylesheet" media="screen" href="https://fontlibrary.org/en/face/redkost-comic" type="text/css"/>
-		<title>Liquid Layout</title>
+		<title>m04 Assignment</title>
 	</head>
 	<body>
 		<div id="header">
