feature section - image upload and display

--- a/m04/index.html
+++ b/m04/index.html
@@ -23,6 +23,7 @@
 		<div id="content">
 			<div id="feature">
 				<p>Feature</p>
+				<img src="images/bhill-transparent.png" alt="Transparent Face">
 			</div>
 			<div class="article column1">
 				<p>Column One</p>
