--- a/m05/index.html
+++ b/m05/index.html
@@ -3,9 +3,15 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
-  <title>JS Bin</title>
+  <link rel="stylesheet" href="css/style.css">
+  <title>M05 - Bullseye</title>
 </head>
-<body>
-
-</body>
+  <body>
+    <section id="page2">
+      <h1>Bullseye</h1>
+      <img src="#" id="teacher2" alt="">
+      <section id="blackboard"></section>
+    </section>
+    <script src="js/scripts.js"></script>
+  </body>
 </html>
