Cleaned up JS, only multiplication.

--- a/m05/index.html
+++ b/m05/index.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
+  <meta description="A simple page which parses user input, then returns a multiplication table.">
   <link rel="stylesheet" href="css/style.css">
   <title>M05 - Bullseye</title>
 </head>
