--- a/m05/index.html
+++ b/m05/index.html
@@ -3,14 +3,14 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
-  <meta description="A simple page which parses user input, then returns a multiplication table.">
+  <meta name="description" content="A simple page which parses user input, then returns a multiplication table.">
   <link rel="stylesheet" href="css/style.css">
   <title>M05 - Bullseye</title>
 </head>
   <body>
     <section id="page2">
       <h1>Bullseye</h1>
-      <img src="images/teacher.png" id="teacher2" alt="">
+      <img src="images/teacher.png" id="teacher2" alt="Grumpy Teacher">
       <section id="blackboard"></section>
     </section>
     <script src="js/scripts.js"></script>
