--- a/m06/notes.html
+++ b/m06/notes.html
@@ -1,15 +1,7 @@
 Date: 2.6.2025
-Attendees: Ethan, Alan, 
+Attendees: Ethan, Alan, Jeremy 
 
-Action items:
-  - Add heading with project name
-  - Add project description
-  - Purpose
-  - Group member names
-- Decide on the project itself (Mock blog page, or tax calc?, I'm sure we're open to similar ideas if anything comes to mind)
-- Flesh out project TODO's
-
-Project ideas:
+Brainstormed project ideas:
 - Tax calculator
 - Mad libs
 - Blog page
@@ -20,3 +12,18 @@ Project ideas:
   - Similar to https://www.random.org/dice/?num=2
   - Potentially add drop down menu to add more faces
   - Add drop down menu for the amount of dice rolled
+
+Decided on project details:
+- Description: Prompts the user to roll 2 dice with a button click, the dice result will then be displayed in a styled div for the user to view. The user can continue to reroll dice if they wish.
+- Purpose: Offers the user randomly generated dice rolls with a convenient, user friendly experience
+
+Decided on roles:
+- Project Leader: Alan 
+  - Guides team to complete the project
+- Repo Coordinator: Jeremy 
+  - Organizes the repository 
+- Documentation: Ethan
+  - Takes minutes at meetings
+
+Action items:
+- Finish project details - Alan
