Added js file/content

--- a/a3/index.html
+++ b/a3/index.html
@@ -3,6 +3,7 @@
 <head>
 <meta name="description" content="Week 6 - BC - Rhombus">
 <meta charset="utf-8">
+<script type="text/javascript" src="js/scripts.js"></script>
 <title>a3 - Alan Vollmar</title>
 </head>
 <body>
