--- a/a3/index.html
+++ b/a3/index.html
@@ -7,6 +7,8 @@
 <title>a3 - Alan Vollmar</title>
 </head>
 <body>
+  <h1>Alan Vollmar</h1>
+  <h3>let's Shape Up</h3>
   <label>What is the size of Rhombus?</label><br>
   <input type="text" id="rHeight" value="5" size="5">
   <br>
