Testing 2 section layout

--- a/a3/index.html
+++ b/a3/index.html
@@ -41,5 +41,6 @@
   <div id="upRight"></div>
   <div id="downLeft"></div>
   <div id="downRight"></div>
+  <div id="topShape"></div>
 </body>
 </html>
