lowerShape + function cleanup

--- a/a3/index.html
+++ b/a3/index.html
@@ -41,6 +41,7 @@
   <div id="upRight"></div>
   <div id="downLeft"></div>
   <div id="downRight"></div>
-  <div id="topShape"></div>
+  <div id="upperShape"></div>
+  <div id="lowerShape"></div>
 </body>
 </html>
