--- a/a3/index.html
+++ b/a3/index.html
@@ -3,46 +3,53 @@
 <head>
 <meta name="description" content="Week 6 - BC - Rhombus">
 <meta charset="utf-8">
+<link rel="stylesheet" type="text/css" rel="css/style.css">
 <script type="text/javascript" src="js/scripts.js"></script>
 <title>a3 - Alan Vollmar</title>
 </head>
 <body>
-  <h1>Alan Vollmar</h1>
-  <h3>let's Shape Up</h3>
-  <label>What is the size of Rhombus?</label><br>
-  <input type="text" id="rHeight" value="5" size="5">
-  <br>
-  <label>Choose color for Even position</label><br>
-  <select id="colorEven">
-    <option value="#0000FF">Blue</option>
-    <option value="#FF0000">Red</option>
-    <option value="#FF9900">Orange</option>
-  </select><br>
-  
-  <label>Choose color for Odd position</label><br>
-  <select id="colorOdd">
-    <option value="#FF0099">Pink</option>
-    <option value="#33FF00">Green</option>
-    <option value="#660099">Purple</option>
-  </select>
-  <br>
-  <label>Choose symbol for Rhombus</label>
-  <select id="symbol">
-    <option value="*">*</option>
-    <option value="$">$</option>
-    <option value="@">@</option>
-  </select>
-  <br>
-  <button onclick="createRhombus(document.getElementById('rHeight').value,
-  document.getElementById('colorEven').value,
-  document.getElementById('colorOdd').value,
-  document.getElementById('symbol').value);">Display Rhombus</button>
-  <div id="upLeft">Rhombus</div>
-  <div id="upRight"></div>
-  <div id="downLeft"></div>
-  <div id="downRight"></div>
-  <hr />
-  <div id="upperShape"></div>
-  <div id="lowerShape"></div>
+  <div id="wrapper">
+    <h1>Alan Vollmar</h1>
+    <h3>let's Shape Up</h3>
+    <form id="shapeForm">
+      <label>What is the size of Rhombus?</label><br>
+      <input type="text" id="rHeight" value="5" size="5">
+      <br>
+      <label>Choose color for Even position</label><br>
+      <select id="colorEven">
+        <option value="#0000FF">Blue</option>
+        <option value="#FF0000">Red</option>
+        <option value="#FF9900">Orange</option>
+      </select><br>
+      
+      <label>Choose color for Odd position</label><br>
+      <select id="colorOdd">
+        <option value="#FF0099">Pink</option>
+        <option value="#33FF00">Green</option>
+        <option value="#660099">Purple</option>
+      </select>
+      <br>
+      <label>Choose symbol for Rhombus</label>
+      <select id="symbol">
+        <option value="*">*</option>
+        <option value="$">$</option>
+        <option value="@">@</option>
+      </select>
+      <br>
+      <button onclick="createRhombus(document.getElementById('rHeight').value,
+      document.getElementById('colorEven').value,
+      document.getElementById('colorOdd').value,
+      document.getElementById('symbol').value);">Display Rhombus</button>
+    </form>
+    <div id="results">
+      <div id="upLeft">Rhombus</div>
+      <div id="upRight"></div>
+      <div id="downLeft"></div>
+      <div id="downRight"></div>
+      <hr />
+      <div id="upperShape"></div>
+      <div id="lowerShape"></div>
+    </div> <!-- End results -->
+  </div> <!-- End Wrapper -->
 </body>
 </html>
