--- a/a3/index.html
+++ b/a3/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta name="description" content="Week 6 - BC - Rhombus">
 <meta charset="utf-8">
-<link rel="stylesheet" type="text/css" rel="css/style.css">
+<link rel="stylesheet" type="text/css" href="css/style.css">
 <script type="text/javascript" src="js/scripts.js"></script>
 <title>a3 - Alan Vollmar</title>
 </head>
