form submission changes

--- a/a3/index.html
+++ b/a3/index.html
@@ -11,7 +11,10 @@
   <div id="wrapper">
     <h1>Alan Vollmar</h1>
     <h3>let's Shape Up</h3>
-    <form id="shapeForm" onSubmit="createRhombus(document.getElementById('rHeight').value,
+    <form id="shapeForm" action="createRhombus(document.getElementById('rHeight').value,
+    document.getElementById('colorEven').value,
+    document.getElementById('colorOdd').value,
+    document.getElementById('symbol').value);" onSubmit="createRhombus(document.getElementById('rHeight').value,
     document.getElementById('colorEven').value,
     document.getElementById('colorOdd').value,
     document.getElementById('symbol').value);">
