form submission 'return false'

--- a/a3/index.html
+++ b/a3/index.html
@@ -14,10 +14,7 @@
     <form id="shapeForm" action="createRhombus(document.getElementById('rHeight').value,
     document.getElementById('colorEven').value,
     document.getElementById('colorOdd').value,
-    document.getElementById('symbol').value);" onSubmit="createRhombus(document.getElementById('rHeight').value,
-    document.getElementById('colorEven').value,
-    document.getElementById('colorOdd').value,
-    document.getElementById('symbol').value);">
+    document.getElementById('symbol').value);" onSubmit="return false;">
       <label>What is the size of Rhombus?</label><br>
       <input type="text" id="rHeight" value="5" size="5">
       <br>
