fix: form submission refresh

--- a/a3/index.html
+++ b/a3/index.html
@@ -11,10 +11,7 @@
   <div id="wrapper">
     <h1>Alan Vollmar</h1>
     <h3>let's Shape Up</h3>
-    <form id="shapeForm" action="createRhombus(document.getElementById('rHeight').value,
-    document.getElementById('colorEven').value,
-    document.getElementById('colorOdd').value,
-    document.getElementById('symbol').value);" onSubmit="return false;">
+    <form id="shapeForm" onSubmit="return false;">
       <label>What is the size of Rhombus?</label><br>
       <input type="text" id="rHeight" value="5" size="5">
       <br>
