--- a/a3/index.html
+++ b/a3/index.html
@@ -4,6 +4,7 @@
 <meta name="description" content="Week 6 - BC - Rhombus">
 <meta charset="utf-8">
 <link rel="stylesheet" type="text/css" href="css/style.css">
+<link rel="stylesheet" media="screen" href="https://fontlibrary.org/en/face/freeuniversal" type="text/css"/>
 <script type="text/javascript" src="js/scripts.js"></script>
 <title>a3 - Alan Vollmar</title>
 </head>
