--- a/a3/index.html
+++ b/a3/index.html
@@ -4,14 +4,16 @@
 <meta name="description" content="Week 6 - BC - Rhombus">
 <meta charset="utf-8">
 <link rel="stylesheet" type="text/css" href="css/style.css">
-<link rel="stylesheet" media="screen" href="https://fontlibrary.org/en/face/freeuniversal" type="text/css"/>
+<link rel="stylesheet" media="screen" href="https://fontlibrary.org/en/face/avrile-sans-ui" type="text/css"/>
 <script type="text/javascript" src="js/scripts.js"></script>
 <title>a3 - Alan Vollmar</title>
 </head>
 <body>
   <div id="wrapper">
+    <div id="header">
     <h1>Alan Vollmar</h1>
     <h3>let's Shape Up</h3>
+    </div>
     <form id="shapeForm" onSubmit="return false;">
       <label>What is the size of Rhombus?</label><br>
       <input type="text" id="rHeight" value="5" size="5">
