font and style changes

--- a/a3/index.html
+++ b/a3/index.html
@@ -5,6 +5,8 @@
 <meta charset="utf-8">
 <link rel="stylesheet" type="text/css" href="css/style.css">
 <link rel="stylesheet" media="screen" href="https://fontlibrary.org/en/face/avrile-sans-ui" type="text/css"/>
+<link rel="stylesheet" media="screen" href="https://fontlibrary.org/en/face/lemon" type="text/css"/>
+
 <script type="text/javascript" src="js/scripts.js"></script>
 <title>a3 - Alan Vollmar</title>
 </head>
@@ -12,7 +14,7 @@
   <div id="wrapper">
     <div id="header">
     <h1>Alan Vollmar</h1>
-    <h3>let's Shape Up</h3>
+    <h3>Let's Shape Up</h3>
     </div>
     <form id="shapeForm" onSubmit="return false;">
       <label>What is the size of Rhombus?</label><br>
@@ -44,12 +46,7 @@
       document.getElementById('colorOdd').value,
       document.getElementById('symbol').value);">Display Rhombus</button>
     </form>
-    <div id="results">
-      <div id="upLeft">Rhombus</div>
-      <div id="upRight"></div>
-      <div id="downLeft"></div>
-      <div id="downRight"></div>
-      <hr />
+    <div class="results">
       <div id="upperShape"></div>
       <div id="lowerShape"></div>
     </div> <!-- End results -->
