--- a/a3/index.html
+++ b/a3/index.html
@@ -39,10 +39,10 @@
         <option value="*">*</option>
         <option value="$">$</option>
         <option value="@">@</option>
-        <option value="@">©</option>
-        <option value="@">™</option>
-        <option value="@">✪</option>
-        <option value="@">▞</option>
+        <option value="©">©</option>
+        <option value="™">™</option>
+        <option value="✪">✪</option>
+        <option value="▞">▞</option>
       </select>
       <br>
       <button onclick="createRhombus(document.getElementById('rHeight').value,
