Template - implement sticky footer

--- a/midterm/template.html
+++ b/midterm/template.html
@@ -3,11 +3,22 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
-  <title>Alan V | Midterm Project</title>
+  <link rel="stylesheet" type="text/css" href="css/style.css">
+
+  <title>Alan V | Template</title>
 </head>
 <body>
 <!-- USE THIS: A boilerplate including header, menu items, and core elements for other pages. -->
-
+<div class="wrapper">
+  <header class="page-header">This is the header</header>
+  <main class="page-body">
+    <p>
+      Main page content here, add more to this text if you want to see the
+      footer push down.
+    </p>
+  </main>
+  <footer class="page-footer">Sticky footer</footer>
+</div>
 
 </body>
 </html>
