Clean up - Sticky footer

--- a/midterm/template.html
+++ b/midterm/template.html
@@ -9,15 +9,15 @@
 </head>
 <body>
 <!-- USE THIS: A boilerplate including header, menu items, and core elements for other pages. -->
-<div class="wrapper">
-  <header class="page-header">This is the header</header>
+<div class="container">
+  <header class="header">This is the header</header>
   <main class="page-body">
     <p>
       Main page content here, add more to this text if you want to see the
       footer push down.
     </p>
   </main>
-  <footer class="page-footer">Sticky footer</footer>
+  <footer class="footer">Sticky footer</footer>
 </div>
 
 </body>
