--- a/midterm/template.html
+++ b/midterm/template.html
@@ -10,7 +10,22 @@
 <body>
 <!-- USE THIS: A boilerplate including header, menu items, and core elements for other pages. -->
 <div class="container">
-  <header class="header">This is the header</header>
+  <header class="header">
+    <div class="header-content">
+      <menu class="header-menu">
+        <ul>
+          <li><a href="#">About</a></li>
+          <li><a href="#">Courses</a></li>
+          <li><a href="#">Artifacts</a></li>
+          <li><a href="#">Modules</a></li>
+          <li><a href="#">Contact</a></li>
+          <li><a href="#">Creative</a></li>
+          <li><a href="#">Validation</a></li>
+
+        </ul>
+      </menu>
+    </div>
+  </header>
   <main class="page-body">
     <p>
       Main page content here, add more to this text if you want to see the
