--- a/midterm/template.html
+++ b/midterm/template.html
@@ -27,10 +27,12 @@
     </div>
   </header>
   <main class="page-body">
+    <div class="wrapper">
     <p>
       Main page content here, add more to this text if you want to see the
       footer push down.
     </p>
+    </div>
   </main>
   <footer class="footer">Sticky footer</footer>
 </div>
