wrapper and basic element display

--- a/midterm/template.html
+++ b/midterm/template.html
@@ -28,10 +28,21 @@
   </header>
   <main class="page-body">
     <div class="wrapper">
-    <p>
+      <h1>Heading 1</h1>
+      <p>
+        Main page content here, add more to this text if you want to see the
+        footer push down.
+        </p>
+      <h2>Heading 2</h2>
+      <p>
+        Main page content here, add more to this text if you want to see the
+        footer push down.
+        </p>
+      <h3>Heading 3</h3>
+      <p>
       Main page content here, add more to this text if you want to see the
       footer push down.
-    </p>
+      </p>
     </div>
   </main>
   <footer class="footer">Sticky footer</footer>
