colors and menu items

--- a/midterm/template.html
+++ b/midterm/template.html
@@ -45,7 +45,7 @@
       </p>
     </div>
   </main>
-  <footer class="footer">Sticky footer</footer>
+  <footer class="footer">&copy; 2025 | Alan Vollmar </footer>
 </div>
 
 </body>
