--- a/midterm/template.html
+++ b/midterm/template.html
@@ -12,6 +12,9 @@
 <div class="container">
   <header class="header">
     <div class="header-content">
+      <div class="header-logo">
+        <p>Header Logo</p>
+      </div>
       <menu class="header-menu">
         <ul>
           <li><a href="#">About</a></li>
