--- a/midterm/template.html
+++ b/midterm/template.html
@@ -13,7 +13,7 @@
   <header class="header">
     <div class="header-content">
       <div class="header-logo">
-        <p>Header Logo</p>
+        <p>Alan Vollmar's Site</p>
       </div>
       <menu class="header-menu">
         <ul>
