--- a/midterm/template.html
+++ b/midterm/template.html
@@ -48,7 +48,7 @@
       </p>
     </div>
   </main>
-  <footer class="footer">&copy; 2025 | Alan Vollmar </footer>
+  <footer class="footer"><span>&copy; 2025 | Alan Vollmar </span></footer>
 </div>
 
 </body>
