--- a/midterm/template.html
+++ b/midterm/template.html
@@ -4,6 +4,8 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
   <link rel="stylesheet" type="text/css" href="css/style.css">
+  <link rel="stylesheet" media="screen" href="https://fontlibrary.org/en/face/open-sans-y2k" type="text/css"/> <!-- Open Sans Font -->
+
 
   <title>Alan V | Template</title>
 </head>
