header + font stuff

--- a/midterm/template.html
+++ b/midterm/template.html
@@ -5,6 +5,8 @@
   <meta name="viewport" content="width=device-width">
   <link rel="stylesheet" type="text/css" href="css/style.css">
   <link rel="stylesheet" media="screen" href="https://fontlibrary.org/en/face/open-sans-y2k" type="text/css"/> <!-- Open Sans Font -->
+  <link rel="stylesheet" media="screen" href="https://fontlibrary.org//face/bebusneuebold-news" type="text/css"/> <!-- Bebas Neue -->
+
 
 
   <title>Alan V | Template</title>
