--- a/midterm/template.html
+++ b/midterm/template.html
@@ -17,7 +17,7 @@
   <header class="header">
     <div class="header-content">
       <div class="header-logo">
-        <span>Alan Vollmar's Site</span>
+        <span><a href="#">Alan Vollmar</a></span>
       </div>
       <menu class="header-menu">
         <ul>
