menu item links

--- a/midterm/template.html
+++ b/midterm/template.html
@@ -20,13 +20,13 @@
         <a href="#"><span>Alan Vollmar</span></a>
       </div>
       <menu class="header-menu">
-        <li><a href="#">About</a></li>
-        <li><a href="#">Courses</a></li>
-        <li><a href="#">Artifacts</a></li>
-        <li><a href="#">Modules</a></li>
-        <li><a href="#">Contact</a></li>
-        <li><a href="#">Creative</a></li>
-        <li><a href="#">Validation</a></li>
+        <li><a href="about.html">About</a></li>
+        <li><a href="courses.html">Courses</a></li>
+        <li><a href="artifacts.html">Artifacts</a></li>
+        <li><a href="modules.html">Modules</a></li>
+        <li><a href="contact.html">Contact</a></li>
+        <li><a href="creative.html">Creative</a></li>
+        <li><a href="validation.html">Validation</a></li>
       </menu>
     </div>
   </header>
